--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
-@charset "UTF-8"; 
+@charset "UTF-8";
+/* hp157 */
 @font-face {
     font-family: 'Gotham Pro';
     src: url(fonts/GothaProReg.otf);
@@ -21,7 +22,7 @@ html,body {
 }
 
 html {
-    font-size: 10px;
+    font-size: 11px;
 }
 
 body {
@@ -47,7 +48,7 @@ h1,h2,h3,h4 {
     margin-left: auto;
     margin-right: auto;
 }
-
+.h1{font-size:3rem;font-weight:bold;margin: 1em 0;}
 a {
     text-decoration: none;
     color: #09d
@@ -93,20 +94,20 @@ a:hover {
 }
 .hp6:hover{text-decoration:underline}
 .hp7 {
-    background: white;
+    /* background: black; */
     border-radius: 50%;
     width: 2.8rem;
     line-height: 2.8rem;
     display: inline-block;
     text-align: center;
-    font-size: 1.7rem;
-    color: #181818;
+    font-size: 2rem;
+    color: white;
     margin: 0 1rem;
 }
 
 .hp7:hover {
-    background: #37c4ff;
-    /* color:white */
+    /* background: #37c4ff; */
+    color: #09d;
 }
 
 .hp8 {
@@ -230,7 +231,12 @@ a:hover {
 }
 
 .hp95 {
-    width: 8rem;
+    /* width: 8rem; */
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 3rem;
+    width: 3.85rem;
+    position: relative;
 }
 
 .hp96 {
@@ -285,7 +291,7 @@ a:hover {
 
 .hp99 {
     color: white;
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     display: block;
     white-space: nowrap;
 }
@@ -446,7 +452,7 @@ a:hover {
 .hp145{
     font-size: 2.4rem;
     font-weight: 700;
-    text-align: center;
+    text-align: left;
 }
 .hp146{}
 .hp147{
@@ -461,16 +467,116 @@ a:hover {
 .hp149{
     font-size: 1.2rem;
 }
-.hp150{}
+.hp150{display:none}
 .hp151{}
 .hp152{}
-.hp153{}
-.hp154{}
-.hp155{}
+.hp152:hover i{color:#09d}
+.hp153{
+    border: none;
+    align-self: stretch;
+    /* width: calc(100% - 2rem); */
+    width: 3.5rem;
+    height: 2.5rem;
+    background: white;
+    border-radius: 8px;
+    padding: 0 2.5rem 0 1rem;
+    transition: width 0.6s;
+}
+.hp154{
+    align-self: center;
+    font-size: 1.8rem;
+    /* padding: 0 0.7rem; */
+    position: absolute;
+    right: 0.8rem;
+    cursor: pointer;
+}
+.hp155{
+    display: flex;
+    /* background: white; */
+    /* border-radius: 8px; */
+    /* width: 3.5rem; */
+    /* height: 2.5rem; */
+    position: absolute;
+    /* cursor: pointer; */
+    right: 0;
+}
 .hp156{}
-.hp157{}
-.hp158{}
-.hp159{}
+.hp157{
+    padding: 2rem 0 0;
+    min-width: 30rem;
+}
+.hp158{cursor:pointer;font-size: 1.6rem;font-weight: 400;padding: 0.1em 0;margin: 0.6em 0;}
+.hp158 i{display:none}
+.hp158.active i{display:inline}
+.hp158.active{font-weight:700}
+.hp158:not(.active):hover{color:#09d}
+.hp159{
+    width: 0;
+    height:0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid #fff;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    position: absolute;
+    top: -20px;
+    z-index: 2;
+    /* box-shadow: 0px 13px 22px 0px rgb(38 38 38 / 40%); */
+    filter: drop-shadow(0px 12px 16px rgba(0,0,0,0.4));
+    left: 10.9rem;
+}
+.hp160{
+
+    display: flex;
+}
+.hp161{
+    display: flex;
+    margin: 1.6em -1em 0;
+    align-items: center;
+    justify-content: space-between;
+}
+.hp160 .hp162{
+    font-size: 1.6rem;
+}
+.hp163{
+    font-size: 1.4rem;
+    white-space: nowrap;
+    margin: 0 0 0 0.6em;
+}
+.hp164{
+    position: relative;
+}
+.hp165{
+    position: absolute;
+    top: 5rem;
+    position: absolute;
+    background: white;
+    z-index: 1;
+    box-shadow: 0px 13px 22px 0px rgba(38, 38, 38, 0.4);
+    border-radius: 1rem;
+    padding: 2.5rem 3rem;
+    left: -7.9rem;
+    min-width: 23rem;
+}
+.hp166{
+    background: #09d;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 0.5rem 1.2rem 0.6rem;
+    /* display: table; */
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin: 0 1em;
+}
+   .hp166:hover{ background: #0071b5;
+    }
+.hp167{
+    color: #09d;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.hp167:hover{text-decoration:none}
+.hp168{}
 .input1{
   background-color: rgb(246, 246, 246);
   box-shadow: inset 0px 2px 5px 0px rgba(206, 206, 206, 0.4);
@@ -549,7 +655,7 @@ a:hover {
 }
 
 .hp22:not(:first-child) {
-    margin-left: 4rem
+    margin-left: 3.8rem;
 }
 
 .hp22:last-child {
@@ -632,6 +738,7 @@ a:hover {
     padding: 4.8rem 4.6rem;
     margin-right: 2rem;
     background-size: cover;
+    color: white;
 }
 
 .hp34 {
@@ -642,6 +749,7 @@ a:hover {
     padding: 4.3rem 4.6rem;
     line-height: 1.2;
     background-size: cover;
+    color: white;
 }
 
 .hp35 {
@@ -728,6 +836,7 @@ a:hover {
     font-size: 3rem;
     font-weight: 700;
     /* margin: 5rem 0 3.5rem; */
+    line-height: 1.2;
 }
 
 .hp50 {
@@ -941,12 +1050,14 @@ a:hover {
     font-size: 1.9rem;
     font-weight: 700;
     color: #333;
+    margin: 0 0 0.4rem;
 }
 
-.hp79 i {
-    font-size: 2rem;
+.hp152 i {
+    font-size: 3rem;
     font-weight: 700;
     margin: 0 0.5rem 1rem 0;
+    color: #333;
 }
 
 .hp80 {
@@ -963,56 +1074,83 @@ a:hover {
     background: #0071b5;
     text-decoration: none;
 }
-.pa1 {
-}
+.pa1 {background: #f9f9f9;font-size: 1.4rem;padding: 0.8em 0;}
 
-.pa2 {
-}
-
-.pa3 {
-}
+.pa2 {color: #333;/* font-size: 1.4rem; *//* margin: 1rem 0; */text-decoration: underline;}
+.pa2:hover{text-decoration:none}
+.pa3 {color: #999;}
 
 .pa4 {
 }
 
-.pa5 {
-}
+.pa5 {margin: 1rem 0;display: flex;/* justify-content: space-between; */}
 
-.pa6 {
-}
+.pa6 {min-width: 21.2rem;margin: 0 2.8rem 0 0;background: radial-gradient(circle at center, #09d 0, #0071b5 90%);min-height: 10rem;}
 
 .pa7 {
 }
 
-.pa8 {
-}
+.pa8 {display: flex;justify-content: space-between;margin: 0 -1rem 2rem;}
 
-.pa9 {
+.pa9 {border: 1px solid #f6f6f6;font-size: 1.6rem;color: #000;width: 7.2rem;border-radius: 1rem;/* display: flex; *//* text-align: center; *//* align-items: center; */padding: 0.8rem 1rem;display: flex;align-items: center;justify-content: center;cursor: pointer;position: relative;margin: 0 0.6rem;}
+.pa9.active{border: 3px solid #09d;}
+.pa9.active::after{
+    content:"";
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid transparent;
+    border-top: 10px solid #09d;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    position: absolute;
+    /* top: 0; */
+    z-index: 1;
+    /* box-shadow: 0px 13px 22px 0px rgb(38 38 38 / 40%); */
+    /* filter: drop-shadow(0px 12px 16px rgba(0,0,0,0.4)); */
+    /* left: 10.9rem; */
+    bottom: -2rem;
 }
-
+.pa9:hover{text-decoration:none}
+.pa9:not(.active):hover{
+    box-shadow: 0px 13px 22px 0px rgba(200, 200, 200, 0.4);
+    border-color: #fff;
+}
 .pa10 {
+    display: flex;
+    justify-content: center;
 }
 
 .pa11 {
 }
 
-.pa12 {
-}
+.pa12 {display: flex;flex-wrap: wrap;margin: 0 -1rem 2rem;}
 
-.pa13 {
+.pa13 {background: #333;color: #fff;border-radius: 0.5em;padding: 0.6em 3em;font-size: 1.4rem;cursor: pointer;}
+.pa13:hover {
+    background: #1c1c1c;
 }
-
 .pa14 {
+    margin: 6rem auto;
+    background: url(../assets/img/34.jpg);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    padding: 2rem 4rem 2rem 25rem;
+    border-radius: 12px;
+    max-width: 94rem;
+    }
+.pa14 h2{font-size: 3rem;/* text-decoration: underline; */margin: 0.8em 0;}
+.pa14 p{
+    margin: 1em 0;
+    font-size: 1.4rem;
 }
-
-.pa15 {
-}
+.pa15 {font-size: 1rem;margin: 0 1em;}
 
 .pa16 {
+    
 }
 
-.pa17 {
-}
+.pa17 {display: inline;}
 
 .pa18 {
 }
@@ -1056,23 +1194,38 @@ a:hover {
 .minner{background-color:#fff;border-radius: 1.4rem;padding: 4.2rem 4.2rem;max-width: 44rem;color:#000;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);/* overflow: scroll; */box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.4);}
 .mclose{position:absolute;right: 1.6rem;top: 1.6rem;cursor: pointer;font-size: 3rem;}
 .mclose:hover{
-    color: #555;
+    color: #09d;
 }
 /*------------------------------------*\
 	axd 
 \*------------------------------------*/
+@media (max-width: 1111px) {
+	/*т.к. увеличили с 10px до 11px, чтобы влезло на планшете*/
+	html{font-size:10px}
+}
 @media (min-width: 1011px) {
+	/*возможность увеличить html font-size */
     .cwidth {
         max-width:97rem
     }
 }
 
 @media (max-width: 1010px) {
+	.hp159{}
+.hp160{}
+.hp161{}
+.hp162{}
+.hp163{}
+.hp164{}
+.hp165{}
+.hp166{}
+.hp167{}
+.hp168{}
     .hp128 .hp126 .fa-chevron-left {
-    left: -2rem;
+    left: -1.5rem;
 }
     .hp128 .hp126 .fa-chevron-right {
-    right: -2rem;
+    right: -1.5rem;
 }
 	.hp134{}
 .hp135{}
@@ -1081,8 +1234,12 @@ a:hover {
 .hp138{}
 .hp139{}
 .hp140{}
-.hp141{}
-.hp142{}
+.hp141{
+    /* font-size: 1.4rem; */
+}
+.hp142{
+    font-size: 1.5rem;
+}
 .hp143{}
 .hp144{}
 .hp145{}
@@ -1099,9 +1256,11 @@ a:hover {
 .hp156{}
 .hp157{}
 .hp158{}
-.hp159{}
+.hp159{
+    top: -18px;
+}
     html {
-        font-size:6px
+        font-size: 8px;
     }
 
     .cw {
@@ -1183,6 +1342,7 @@ a:hover {
     }
 
     .hp124 {
+    padding: 2.2rem 2.2rem;
     }
 
     .hp125 {
@@ -1276,7 +1436,8 @@ a:hover {
     .hp21 {
     }
 
-    .hp22 {
+    .hp22:not(:first-child) {
+    margin-left: 2.8rem;
     }
 
     .hp23 {
@@ -1363,15 +1524,19 @@ a:hover {
     }
 
     .hp50 {
+    font-size: 1.5rem;
     }
 
     .hp51 {
+    margin: 0 0.2rem;
     }
 
     .hp52 {
+    width: 89rem;
     }
 
     .hp53 {
+    /* width: 20rem; */
     }
 
     .hp54 {
@@ -1381,6 +1546,7 @@ a:hover {
     }
 
     .hp56 {
+    font-size: 1.6rem;
     }
 
     .hp57 {
@@ -1393,6 +1559,7 @@ a:hover {
     }
 
     .hp60 {
+    font-size: 1.6rem;
     }
 
     .hp61 {
@@ -1424,6 +1591,7 @@ a:hover {
     }
 
     .hp70 {
+    font-size: 1.8rem;
     }
 
     .hp71 {
@@ -1451,9 +1619,11 @@ a:hover {
     }
 
     .hp79 {
+    font-size: 2.2rem;
     }
-
+.hp82{font-size: 1.5rem;}
     .hp80 {
+    font-size: 1.6rem;
     }
 
     .pa1 {
@@ -1472,17 +1642,23 @@ a:hover {
     }
 
     .pa6 {
+    margin: 0 2rem 0 0;
     }
 
     .pa7 {
     }
 
     .pa8 {
+    flex-wrap: wrap;
     }
 
     .pa9 {
+    /* bottom: -2rem; */
+    /* width: calc(33% - 10px); */
     }
-
+.pa9.active::after{
+    bottom: -2.8rem;
+}
     .pa10 {
     }
 
@@ -1502,6 +1678,9 @@ a:hover {
     }
 
     .pa16 {
+    /* text-align: center; */
+    margin: 1.6rem 0.6rem;
+    width: calc(33% - 10px);
     }
 
     .pa17 {
@@ -1517,34 +1696,84 @@ a:hover {
     }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 762px) {
+	.hp159{}
+.hp160{}
+.hp161{}
+.hp162{}
+.hp163{}
+.hp164{}
+.hp165{}
+.hp166{}
+.hp167{}
+.hp168{}
 	.minner {
     width: calc(100% - 30px);
 }
 	.hp134{}
 .hp135{}
 .hp136{}
-.hp137{}
-.hp138{
-    width: calc(50% - 2rem);
+.hp137{
+    margin: 6rem -1rem 0;
 }
-.hp139{}
-.hp140{}
-.hp141{}
-.hp142{}
+.hp138{
+    width: calc(100% - 2rem);
+}
+.hp139{
+    width: 11rem;
+    height: 11rem;
+}
+.hp139 img {
+    /* width: auto; */
+    max-width: 10rem;
+    max-height: 10rem;
+}
+.hp140{
+    /* font-size: 1.6rem; */
+    margin: 0.8rem 0 0 2rem;
+}
+.hp141{
+    font-size: 1.8rem;
+}
+.hp142{
+    font-size: 2rem;
+}
 .hp143{}
 .hp144{}
-.hp145{}
+.hp145{
+    font-size: 2.8rem;
+}
 .hp146{}
-.hp147{}
+.hp147{
+    font-size: 1.6rem;
+}
+.input1{font-size:1.8rem;padding: 0 1.2rem;}
+.textarea1{font-size:1.8rem;padding: 0.4rem 1.2rem;}
 .hp148{}
-.hp149{}
-.hp150{}
+.hp149{
+    font-size: 1.6rem;
+}
+.hp150{
+    display: block;
+    font-size: 1.8rem;
+    padding: 1.5rem 0 1.1rem;
+    border-bottom: 1px solid white;
+    text-indent: 1.2rem;
+}
 .hp151{}
 .hp152{}
-.hp153{}
-.hp154{}
-.hp155{}
+.hp153{
+    width: 100%;
+    height: 6rem;
+}
+.hp154{
+    right: 3rem;
+}
+.hp155{
+    /* margin: 0; */
+    position: relative;
+    width: 100%;
+}
 .hp156{}
 .hp157{}
 .hp158{}
@@ -1556,6 +1785,7 @@ a:hover {
     .hp93 {
     height: auto;
     padding: 0;
+    flex-direction: column;
     }
 
     .hp94 {
@@ -1567,31 +1797,53 @@ a:hover {
     }
 
     .hp95 {
-    display: none;
+    /* display: none; */
+    width: 100%;
+    background: white;
+    height: 6rem;
+    margin: 0;
+    /* border-top: 1px solid #333; */
     }
 
     .hp96 {
     text-align: center;
     padding: 0;
+    /* position: relative; */
     }
-.hp97{display:block;border-bottom: 1px solid white;padding: 0.4rem 0;}
-.hp97 i{display:none}
+    .hp96:hover .hp98{/* position:static; */display: none;}
+    .hp98{box-shadow:none;position: static;padding: 0;/* padding: 0.8rem 0; *//* text-align: center; */}
+    .hp99{
+    padding: 1.1rem 0;
+    border-bottom: 1px solid white;
+    text-indent: 1.2rem;
+    font-size: 1.8rem;
+}
+.hp97{display:block;border-bottom: 1px solid white;padding: 1.1rem 0;font-size: 1.7rem;/* display: flex; */position: relative;background: #333;text-align: center;}
+.hp97 i{/* display:none */font-size: 1.4rem;/* float: right; */position: absolute;right: 5rem;top: 0rem;left: auto;transform: rotate(90deg);/* transition: all 0.4s; */}
+   
+.hp97.active i{
+    transform: rotate(-90deg);
+    /* transform-origin: center; */
+    /* transform-origin: 0 2rem; */
+    right: 1.3rem;
+}
     .hp100 {
         display: flex;
         justify-content: space-between;
         background: #333;
         color: white;
-        font-size: 1.8rem;
-        padding: 1rem 15px;
+        font-size: 2.2rem;
+        padding: 1.6rem 15px;
         align-items: center;
         /* border-bottom: 1px solid white; */
     }
 
     .hp101 {
-        font-size: 2.6rem;
+        font-size: 3.6rem;
     }
 
-    .hp102 {
+    .hp102:active,.hp101:active {
+        color:#09d;
     }
 
     .hp103 {
@@ -1609,7 +1861,7 @@ a:hover {
     /* padding: 0 15px; */
     /* border-bottom: 1px solid; */
     /* background: grey; */
-    margin: 1.4rem 0 1rem;
+    margin: 2.2rem 0 1.6rem;
     }
 
     .hp106 {
@@ -1617,20 +1869,22 @@ a:hover {
     align-items: center;
     justify-content: space-between;
     color: #333;
-    margin: 0 0 1rem;
+    margin: 0 0 1.4rem;
     }
 
     .hp107 {
-    font-size: 1.8rem;
+    font-size: 2rem;
     display: flex;
     align-items: center;
+    /* margin: 2rem 0; */
     }
 .hp107 i{
     font-size: 2.4rem;
     margin: 0 0.6rem 0 0;
 }
     .hp108 {
-    font-size: 1.6rem;
+    font-size: 2rem;
+    padding: 0.9rem 1rem 0.9rem;
     }
 
     .hp109 {
@@ -1640,38 +1894,38 @@ a:hover {
     }
 
     .hp111 {
-    font-size: 3.2rem;
+    font-size: 3.6rem;
     color: #333;
     }
 
     .hp112 {
-    font-size: 2.6rem;
+    font-size: 3rem;
     color: #333;
     }
 
     .hp113 {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
     color: #333;
     color: white;
     background: #333;
-    width: 4.3rem;
-    height: 4.2rem;
+    width: 4.6rem;
+    height: 4.5rem;
     border-radius: 6px;
     text-align: center;
-    line-height: 4.2rem;
+    line-height: 4.8rem;
     }
 
     .hp114 {
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     color: white;
     margin: 0 1.4rem;
     background: #09d;
     border-radius: 50%;
     /* padding: 0.7rem; */
-    width: 3rem;
-    height: 3rem;
+    width: 3.2rem;
+    height: 3.2rem;
     text-align: center;
-    line-height: 3rem;
+    line-height: 3.2rem;
     }
 
     .hp115 {
@@ -1682,15 +1936,15 @@ a:hover {
     }
 
     .hp116 {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
     color: #333;
     color: white;
     background: #333;
-    width: 4.3rem;
-    height: 4.2rem;
+    width: 4.6rem;
+    height: 4.5rem;
     border-radius: 6px;
     text-align: center;
-    line-height: 4.2rem;
+    line-height: 4.8rem;
     }
 
     .hp117 {
@@ -1705,18 +1959,22 @@ a:hover {
     }
 
     .hp120 {
+    padding: 1.5rem 0 1.6rem;
     }
 
     .hp121 {
     }
 
     .hp122 {
+    font-size: 1.8rem;
+    padding: 1.2rem 1.2rem;
     }
 
     .hp123 {
     }
 
     .hp124 {
+    font-size: 1.8rem;
     }
 
     .hp125 {
@@ -1735,23 +1993,30 @@ a:hover {
     }
 
     .hp130 {
+    margin: 2rem 0.6rem;
+    padding: 1rem 1rem;
     }
 
     .hp131 {
+    width: 16rem;
+    height: 16rem;
     }
 
     .hp132 {
     }
 
     .hp133 {
+    font-size: 1.4rem;
     }
 
     .hp62.nothp62 {
         width: 132px;
+        display: none;
     }
 
     .hp22 {
         margin: 0 0 3rem;
+        width: calc(50% - 2rem);
     }
 
     .hp1 {
@@ -1791,22 +2056,31 @@ a:hover {
     .hp10 {
         flex-direction: column;
         height: auto;
-        padding: 1rem 0;
+        padding: 1rem 3rem;
+        align-items: flex-start;
     }
 
     .hp11 {
         padding: 1rem 0;
+        /* float: left; */
+        /* align-self: flex-start; */
+        font-size: 1.5rem;
     }
 
     .hp12 {
+    width: 5rem;
     }
 
     .hp13 {
+    margin: 0 0 0 1rem;
     }
 
     .hp14 {
         /* flex-direction: column; */
         display: flex;
+        margin: 1rem -1rem;
+        justify-content: space-between;
+        width: 100%;
     }
 
     .hp15 {
@@ -1835,7 +2109,8 @@ a:hover {
         /* flex-direction: column; */
         /* align-items: center; */
         flex-wrap: wrap;
-        justify-content: space-around;
+        /* justify-content: space-around; */
+        margin: 0 0.5rem;
     }
 
     .hp22:not(:first-child) {
@@ -1849,7 +2124,8 @@ a:hover {
         position: relative;
         margin: 2rem 0;
         top: 12px;
-        left: -10px;
+        left: -8rem;
+        /* display: none; */
     }
 
     .hp24 {
@@ -1859,6 +2135,8 @@ a:hover {
     }
 
     .hp26 {
+    font-size: 1.8rem;
+    padding: 1.2rem 1.2rem;
     }
 
     .hp27 {
@@ -1886,6 +2164,9 @@ a:hover {
     .hp33 {
         margin: 0;
         /* overflow: hidden; */
+        max-width: 100%;
+        padding: 4.8rem 3.6rem;
+        border-radius: 10px;
     }
 
     .hp34 {
@@ -1917,6 +2198,7 @@ a:hover {
     }
 
     .hp42 {
+    font-size: 1.8rem;
     }
 
     .hp43 {
@@ -1942,6 +2224,8 @@ a:hover {
     }
 
     .hp50 {
+    font-size: 1.8rem;
+    min-width: 13rem;
     }
 
     .hp51 {
@@ -1970,10 +2254,12 @@ a:hover {
 
     .hp55 {
         max-width: 22rem;
+        font-size: 2rem;
     }
 
     .hp56 {
         /* margin: 0; */
+        font-size: 1.7rem;
     }
 
     .hp57 {
@@ -1983,10 +2269,13 @@ a:hover {
     }
 
     .hp59 {
+    font-size: 1.7rem;
     }
 
     .hp60 {
-        margin: 0 0 0 2rem;
+        margin: 0 0 0 0rem;
+        font-size: 1.8rem;
+        padding: 1.2rem 1.2rem;
     }
 
     .hp61 {
@@ -1994,6 +2283,7 @@ a:hover {
 
     .hp62 {
         margin: 1.4rem 0.8rem 0;
+        width: calc(50% - 2rem);
     }
 
     .hp63 {
@@ -2009,7 +2299,8 @@ a:hover {
         height: auto;
         flex-wrap: wrap;
         padding: 0 0 1.4rem;
-        justify-content: space-around;
+        /* justify-content: space-around; */
+        margin: 0;
     }
 
     .hp67 {
@@ -2022,6 +2313,8 @@ a:hover {
     }
 
     .hp70 {
+    font-size: 2rem;
+    padding: 1.2rem 1.8rem;
     }
 
     .hp71 {
@@ -2055,9 +2348,12 @@ a:hover {
     }
 
     .pa1 {
+    padding: 0.2em 0;
     }
 
     .pa2 {
+    /* display: block; */
+    /* margin: 1rem 0; */
     }
 
     .pa3 {
@@ -2067,18 +2363,23 @@ a:hover {
     }
 
     .pa5 {
+    flex-direction: column;
     }
 
     .pa6 {
+    margin: 0;
     }
 
     .pa7 {
     }
 
     .pa8 {
+    margin: 2rem -0.8rem;
+    justify-content: flex-start;
     }
 
     .pa9 {
+    margin: 0.8rem;
     }
 
     .pa10 {
@@ -2088,21 +2389,30 @@ a:hover {
     }
 
     .pa12 {
+    /* justify-content: space-between; */
     }
 
     .pa13 {
+    padding: 1.6rem 2.4rem;
+    font-size: 1.7rem;
     }
 
     .pa14 {
+    padding: 2rem 4rem;
+    background: #09d;
     }
-
+.pa14 p{font-size: 1.8rem;}
     .pa15 {
+    /* display: none; */
     }
 
     .pa16 {
+    width: calc(50% - 15px);
     }
 
     .pa17 {
+    display: block;
+    margin: 1em 0;
     }
 
     .pa18 {
