--- a/assets/style.css
+++ b/assets/style.css
@@ -1203,15 +1203,17 @@ a:hover {
 .pa35{
     color: #09d;
     font-weight: bold;
-    text-decoration: underline;
-    text-decoration-style: dashed;
+    /* text-decoration: underline; */
+    /* text-decoration-style: dashed; */
     display: flex;
     /* align-items: center; */
 }
+.pa35:not(.active) span{background: linear-gradient(
+90deg
+,transparent 50%,#09d 0) repeat-x 0 100%/2px 0;background-size: 5px 1px;}
 .pa35:not(.active){cursor:pointer}
-.pa35:not(.active):hover {
-    /* color: #0071b5; */
-    text-decoration: none;
+.pa35:not(.active):hover span{
+   background-size:2px 0;
 }
 .pa35:not(:last-child)::after{
     content:"";
@@ -1352,10 +1354,10 @@ a:hover {
     color: white;
     border-radius: 5px;
     text-align: center;
-    padding: 0.5em 0.7em;
-    /* display: table; */
     font-size: 1.4rem;
     cursor: pointer;
+    padding: 0.6rem 2rem;
+    line-height: 2rem;
 }
 .pa54{width: 100%;height: 100%;display: flex;/* align-items: stretch; */}
 .pa55{
@@ -1380,6 +1382,7 @@ a:hover {
 }
 
 @media (max-width: 1010px) {
+    .blueButtonFW{font-size: 1.8rem;padding: 1.2rem 1.2rem;}
 	.pa31{}
 .pa32{}
 .pa33{}
@@ -1886,7 +1889,9 @@ a:hover {
 @media (max-width: 762px) {
 .pa20duplicate{display:initial;margin: 2rem 0 0;}
 .pa20{display:none}
-	.pa31{}
+	.pa31{
+    font-size: 1.7rem;
+}
 .pa32{
     margin: 0;
 }
@@ -1894,6 +1899,7 @@ a:hover {
     flex-direction: column;
     align-items: flex-start;
     margin: 0 0 2rem;
+    font-size: 2rem;
 }
 .pa34{}
 .pa35{
@@ -1922,8 +1928,8 @@ a:hover {
     margin: 0;
     /* max-width: 100%; */
     max-width: calc(100vw - 4rem);
-    /* max-height: 38rem; */
-    max-height: initial;
+    max-height: 38rem;
+    /* max-height: initial; */
     /* height: auto; */
 }
 .pa46{
@@ -2658,9 +2664,9 @@ a:hover {
 .pa53{display:none}
 .pa55 img{
     /* max-width: 52rem; */
-    /* max-height: 52rem; */
+    max-height: 38rem;
 }
-.pa55{height: auto;}
+.pa55{height: auto;/* max-height: 38rem; */}
     .pa20 {
     }
 }
