--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-/* hp157 */
-/* pa18 */
+/* pc1 */
 @font-face {
     font-family: 'Gotham Pro';
     src: url(fonts/GothaProReg.otf);
@@ -1367,6 +1366,170 @@ a:hover {
     height: 46rem;
     }
 	.pa20duplicate{display:none}
+	
+	.pc1{margin:4rem 0;display: flex;justify-content: space-between;}
+	.pc2{background-image: url(assets/img/47.jpg);
+    width: 42.6rem;
+    height: 34.2rem;
+    background-size: cover;}
+	.pc3{
+    max-width: 46rem;
+}
+	.pc4{
+    font-size: 3rem;
+    font-weight: bold;
+    margin: 0 0 3rem;
+}
+	.pc5{
+    font-size: 1.6rem;
+}
+	.pc6{
+    display: flex;
+    margin: 1.4rem 0;
+}
+.pc6 i{font-size: 1.6rem;margin: 0.4rem 1rem 0 0;/* background: #3adc49; *//* color: white; *//* align-self: center; */}
+.pc6 .fa-whatsapp{background: #3adc49;color: white;border-radius: 50%;padding: 0.4rem 0.5rem;}
+.pc6 .fa-viber{background: #7d3daf;color: white;border-radius: 50%;padding: 0.5rem;}
+	.pc7{
+    /* overflow-wrap: unset; */
+    white-space: pre-line;
+    display: flex;
+    /* text-align: left; */
+    line-height: 1.3;
+}
+	.pc8{
+    font-size: 2.2rem;
+    font-weight: bold;
+    color: #333;
+    margin: 0.2rem 1.2rem 0 0;
+}
+	.pc9{}
+	.pc10{
+    font-size: 1.6rem;
+}
+
+.pc10 h3{
+    font-size: 1.8rem;
+    font-weight: bold;
+}
+.pc10 h4{
+    color: #09d;
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin: 2rem 0 0;
+}
+.pc10 p{
+    margin: 1rem 0;
+}
+.pc10 b{}
+
+	.pc11{
+    height: 36rem;
+    overflow: hidden;
+}
+	.pc12{
+    display: flex;
+    margin: 1rem -1rem;
+}
+	.pc13{
+    background: #09d;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 0.4rem 1.2rem 0.5rem;
+    /* display: table; */
+    font-size: 1.4rem;
+    cursor: pointer;
+    margin: 0 1rem;
+    border: 2px solid #09d;
+    position: relative;
+}
+.pc13:not(.active):hover {
+    background: #0071b5;
+    border: 2px solid #0071b5;
+    text-decoration: none;
+}
+.pc13 i{display:none}
+.pc13.active i{display: block;color: #09d;position: absolute;z-index: 1;/* background: #09d; */left: 4rem;font-size: 1.8rem;/* bottom: -10px; */}
+
+.pc13.active{
+    color: #333;
+    background: white;
+    /* border: 2px solid #09d; */
+    font-weight: bold;
+}
+	.pc14{display:none;margin: 3rem 0;}
+.pc14.active{display:block}
+	.pc15{
+    margin: 3rem 0;
+    box-shadow: 0px 2px 8px 0px rgba(233, 233, 233, 0.4);
+    padding: 1.2rem 1rem;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    padding-right: 2.5rem;
+}
+	.pc16{}
+	.pcseo{
+    font-size: 1.6rem;
+    margin: 3rem 0;
+    line-height: 1.2;
+}
+	.pcseo h2{
+    font-size: 1.8rem;
+    font-weight: bold;
+    margin: 2.8rem 0 0;
+    /* line-height: 1.1; */
+}
+	.pcseo p{}
+	.pc17{
+    width: 19rem;
+    height: 18.5rem;
+    background-size: cover;
+}
+.pc18{}
+.pc19{
+    margin: 0 3rem;
+    font-size: 1.6rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.pc20{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.pc21{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: black;
+    color: white;
+    font-size: 1.4rem;
+    padding: 0.6rem 1.2rem 0.7rem;
+    border-bottom-left-radius: 5px;
+}
+.pc21 i{margin: 0 0.5rem 0 0;}
+.pc22{
+    background: #09d;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 0.4rem 1.2rem 0.5rem;
+    /* display: table; */
+    font-size: 1.4rem;
+    cursor: pointer;
+    margin: 0 1rem;
+    border: 2px solid #09d;
+    position: relative;
+    margin: 3.8rem 0 0;
+}
+.pc23{
+    font-size: 2.2rem;
+    font-weight: bold;
+}
+.pc24{}
 /*------------------------------------*\
 	axd 
 \*------------------------------------*/
@@ -1382,6 +1545,33 @@ a:hover {
 }
 
 @media (max-width: 1010px) {
+		.pc17{}
+.pc18{}
+.pc19{}
+.pc20{}
+.pc21{}
+.pc22{
+    padding: 1rem 1.8rem 1.2rem;
+    font-size: 2rem;
+}
+.pc23{}
+.pc24{}
+		.pc1{}
+	.pc2{}
+	.pc3{}
+	.pc4{}
+	.pc5{}
+	.pc6{}
+	.pc7{}
+	.pc8{}
+	.pc9{}
+	.pc10{}
+	.pc11{}
+	.pc12{}
+	.pc13{}
+	.pc14{}
+	.pc15{}
+	.pc16{}
     .blueButtonFW{font-size: 1.8rem;padding: 1.2rem 1.2rem;}
 	.pa31{}
 .pa32{}
@@ -1887,6 +2077,66 @@ a:hover {
 }
 
 @media (max-width: 762px) {
+		.pc17{
+    align-self: self-start;
+    /* margin-left: 3rem; */
+}
+.pc18{}
+.pc19{
+    width: 100%;
+}
+.pc20{
+    width: 100%;
+}
+.pc21{}
+.pc22{}
+.pc23{
+    margin: 1.5rem 0 0.5rem;
+}
+.pc24{}
+			.pc1{
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+    padding: 0 1rem;
+}
+	.pc2{
+    width: 33rem;
+    height: 26rem;
+}
+	.pc3{}
+	.pc4{
+    margin: 1.6rem 0 2rem;
+}
+	.pc5{}
+	.pc6{}
+	.pc7{}
+	.pc8{}
+	.pc9{}
+	.pc10{}
+	.pc11{}
+	.pc12{}
+	.pc13{
+    background: #09d;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    padding: 1.2rem 1.2rem 1.3rem;
+    font-size: 2rem;
+}
+    .pc13.active i{
+    bottom: -1.6rem;
+    left: 5.2rem;
+    font-size: 2.4rem;
+}
+	.pc14{}
+	.pc15{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1.8rem 2.4rem;
+}
+	.pc16{}
 .pa20duplicate{display:initial;margin: 2rem 0 0;}
 .pa20{display:none}
 	.pa31{
