--- a/assets/style.css
+++ b/assets/style.css
@@ -1387,9 +1387,13 @@ a:hover {
     display: flex;
     margin: 1.4rem 0;
 }
-.pc6 i{font-size: 1.6rem;margin: 0.4rem 1rem 0 0;/* background: #3adc49; *//* color: white; *//* align-self: center; */}
+.pc6 i{font-size: 1.6rem;margin: 0.2rem 1rem 0 0;/* background: #3adc49; *//* color: white; *//* align-self: center; */}
+.pc6 .fa-phone-alt{
+    position: relative;
+    top: 0.5rem;
+}
 .pc6 .fa-whatsapp{background: #3adc49;color: white;border-radius: 50%;padding: 0.4rem 0.5rem;}
-.pc6 .fa-viber{background: #7d3daf;color: white;border-radius: 50%;padding: 0.5rem;}
+.pc6 .fa-viber{background: #7d3daf;color: white;border-radius: 50%;padding: 0.4rem;}
 	.pc7{
     /* overflow-wrap: unset; */
     white-space: pre-line;
@@ -1462,7 +1466,7 @@ a:hover {
 .pc14.active{display:block}
 	.pc15{
     margin: 3rem 0;
-    box-shadow: 0px 2px 8px 0px rgba(233, 233, 233, 0.4);
+    box-shadow: 0px 2px 8px 3px rgba(233, 233, 233, 0.4);
     padding: 1.2rem 1rem;
     display: flex;
     position: relative;
@@ -2101,7 +2105,7 @@ a:hover {
     padding: 0 1rem;
 }
 	.pc2{
-    width: 33rem;
+    max-width: 100%;
     height: 26rem;
 }
 	.pc3{}
@@ -2172,7 +2176,10 @@ a:hover {
 .pa42{}
 .pa42 h3{font-size:2.4rem}
 .pa42 p{font-size:1.8rem}
-.pa43{}
+.pa43{
+    padding: 0.7em 2em;
+    font-size: 1.8rem;
+}
 .pa44{}
 .pa45{
     margin: 0;
@@ -2185,6 +2192,7 @@ a:hover {
 .pa46{
     /* padding: 0 1rem; */
 }
+    .pcseo{    font-size: 1.8rem;}
 .pa47{}
 .pa48{}
 	.hp159{}
