--- a/assets/style.css
+++ b/assets/style.css
@@ -1596,12 +1596,12 @@ a:hover {
 .pd1.active .pd7{display:block}
 
 .pd11{
-    display: flex;
+    /* display: flex; */
     font-size: 1.6rem;
     font-weight: 500;
     border-bottom: 1px solid #cccc;
     padding: 1.2rem 0 1.1rem;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 .pd12{
     padding-right: 1rem;
@@ -1641,9 +1641,8 @@ a:hover {
     margin: 3.5rem 0 2.5rem;
 }
 .pd20 span{font-size:2.8rem;color: #09d;}
-.pd21{
-
-}
+.pd21{color: #000;display: flex;justify-content: space-between;}
+.pd21:hover{color:#09d;text-decoration:none}
 .pd22{
     border: 1px solid #f6f6f6;
     width: 40rem;
